# qt-sample-console

./: CMakeLists.txt  main.cpp
